<resources>
    <string name="app_name">Music Player</string>
    <string name="ed_search">Bạn muốn nghe gì ?</string>
    <string name="txt_search">Tìm kiếm</string>
    <string name="float_layout">Đang phát</string>
    <string name="back">Trở về</string>
    <string name="header_btn">Nút header</string>
    <string name="page_title">Music Player</string>
    <string name="topbar_player">Tên bài hát</string>
    <string name="disc">Đĩa nhạc</string>
    <string name="player_btn">Player Button</string>
    <string name="song_manager">Bài hát</string>
    <string name="category_manager">Danh mục</string>
    <string name="user_manager">Người dùng</string>
    <string name="float_button">Nút nổi</string>
    <string name="extended_fab_label">Thêm</string>
    <string name="song_list">Danh sách bài hát</string>
    <string name="add_song">Thêm một bài hát</string>
    <string name="song_name">Tên bài hát</string>
    <string name="song_signer">Tên ca sĩ</string>
    <string name="song_author">Người sáng tác</string>
    <string name="song_link">Chưa có bài hát</string>
    <string name="song_img">Chọn avatar</string>
    <string name="choose_img">Chọn avatar</string>
    <string name="choose_link">Chọn bài hát</string>
    <string name="upload">Tải lên</string>
    <string name="add">Thêm vào</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="delete">Xóa</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="action">Hành động</string>
    <string name="edit_song">Chỉnh sửa bài hát</string>
    <string name="user_list">Danh sách người dùng</string>
    <string name="user">Thông tin cá nhân</string>
    <string name="number">STT</string>
    <string name="full_name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="edit_user">Chỉnh sửa người dùng</string>
    <string name="add_user">Thêm người dùng</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="forward_register">Đăng ký tài khoản mới</string>
    <string name="register">Đăng ký</string>
    <string name="category_list">Danh sách danh mục</string>
    <string name="list">Danh sách</string>
    <string name="edit_category">Chỉnh sửa danh mục</string>
    <string name="add_category">Thêm danh mục</string>
    <string name="category_name">Tên danh mục</string>
    <string name="description">Mô tả</string>
    <string name="favourite">Yêu thích</string>
    <string name="favourite_description">Hiện tại có 10 ca khúc được bạn thích</string>
    <string name="profile">Thông tin người dùng</string>
    <string name="profile_name">Tên người dùng</string>
    <string name="profile_phone">SĐT người dùng</string>
    <string name="profile_email">Email người dùng</string>

    <string name="setting">Cài đặt</string>
    <string name="language">Ngôn ngữ</string>
    <string name="language_vietname">Tiếng Việt</string>
    <string name="language_english">Tiếng Anh</string>

</resources>