<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_layout"
    android:orientation="vertical">

    <!-- Note: A RecyclerView can also be used -->

    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:orientation="horizontal"
        android:background="@drawable/bg_row">

        <TextView
            style="@style/table"
            android:layout_weight="0.16"
            android:scrollHorizontally="true"
            android:text="@string/number" />


        <TextView
            style="@style/table"
            android:layout_weight="0.21"
            android:scrollHorizontally="true"
            android:text="@string/first_name" />

        <TextView
            style="@style/table"
            android:layout_weight="0.21"
            android:scrollHorizontally="true"
            android:text="@string/last_name" />

        <TextView
            style="@style/table"
            android:layout_weight="0.21"
            android:scrollHorizontally="true"
            android:text="@string/email" />

        <TextView
            style="@style/table"
            android:layout_weight="0.21"
            android:scrollHorizontally="true"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tvPassword"
            style="@style/table"
            android:layout_weight="0"
            android:text="@string/password" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:paddingTop="@dimen/pd_2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvUserListManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>