<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="732dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/pd_4"
            android:paddingLeft="@dimen/pd_4"
            android:paddingRight="@dimen/pd_4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/editUser"
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/edit_user"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/pd_2"
                android:paddingRight="@dimen/pd_2"
                android:layout_marginTop="@dimen/mg_2"
                android:paddingBottom="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edFirstName"
                    style="@style/ed_primary"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


                <EditText
                    android:id="@+id/edLastname"
                    style="@style/ed_primary"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/edEmail"
                    style="@style/ed_primary"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/edPhone"
                    style="@style/ed_primary"
                    android:hint="@string/phone"
                    android:inputType="none"
                    android:editable="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/edPassword"
                    style="@style/ed_primary"
                    android:hint="@string/password"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mg_2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEditUserCancel"
                        style="@style/button_black"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_marginRight="2dp"
                        android:text="@string/cancel" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEditUserSubmit"
                        style="@style/button"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="2dp"
                        android:text="@string/edit" />
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>